<resources>
    <string name="app_name">APP Money</string>
    <string name="lbl_saldoactual">Saldo Actual:</string>
    <string name="btn_movimientoNew">Nuevo Movimiento</string>
    <string name="btn_movimientosView">Ver Movimientos</string>
    <string name="lbl_developers">By. Erick Torres y Edisson Sanchez</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Movimientos</string>
    <string name="second_fragment_label">App Money</string>
    <string name="next">Siguiente</string>
    <string name="previous">Anterior</string>

    <string name="lbl_tituloNuevoMov">Ingrese los datos de su Moviemientos</string>
    <string name="lbl_tipoMov">Tipo de Movimiento</string>
    <string name="lbl_monto">Monto</string>
    <string name="lbl_fecha">Fecha</string>
    <string name="lbl_motivo">Motivo</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="tvLocatio">TextView</string>

    <string name="mensaje_creacion_movimiento">Movimiento %1$s Creado</string>
    <string name="lbl_iv_warning">Advertencia Movimientos no creados</string>
    <string name="lbl_tv_warning">No hay movimiento creados</string>
    <string name="btn_gps">Ubicacion</string>
    <string name="lbl_image_tipo">Tipo Movimiento</string>
    <string name="action_delete_all">Borrar Todo</string>
    <string name="lbl_menu_eliminar_movimiento">Eliminar Movimiento</string>
    <string name="delete_all_dialog_message">¿Esta Seguro de Eliminar todos los Movimientos?</string>
    <string name="delete_dialog_title">Confirmar Accion</string>
    <string name="ok">Si</string>
    <string name="mensaje_eliminar_todo">Todos los movimientos se han eliminado</string>
    <string name="cancel">Cancelar</string>
    <string name="title_update_move">Actualizar Movimiento</string>
    <string name="btn_crear_movimiento">Crear Movimiento\n</string>
    <string name="title_new_move">Nuevo Movimiento</string>
    <string name="delete_dialog_message">¿Desea eliminar el movimiento Selecionado?</string>
    <string name="mensaje_eliminacion_mov">Movimiento Eliminado\n</string>
    <string-array name="spi_tipoMovimient">
        <item>Egreso</item>
        <item>Ingreso</item>
    </string-array>
</resources>