<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".crearmovimiento.ui.CrearMovimientoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbl_movimientoType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lbl_tipoMov"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="144dp" />

    <Spinner
        android:id="@+id/spi_tipoMovimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:entries="@array/spi_tipoMovimient"
        app:layout_constraintEnd_toEndOf="@+id/lbl_movimientoType"
        app:layout_constraintStart_toStartOf="@+id/lbl_movimientoType"
        app:layout_constraintTop_toBottomOf="@+id/lbl_movimientoType" />

    <TextView
        android:id="@+id/lbl_monto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lbl_monto"
        app:layout_constraintEnd_toEndOf="@+id/spi_tipoMovimiento"
        app:layout_constraintStart_toStartOf="@+id/spi_tipoMovimiento"
        app:layout_constraintTop_toBottomOf="@+id/spi_tipoMovimiento" />

    <TextView
        android:id="@+id/lbl_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lbl_fecha"
        app:layout_constraintEnd_toEndOf="@+id/txt_monto"
        app:layout_constraintStart_toStartOf="@+id/txt_monto"
        app:layout_constraintTop_toBottomOf="@+id/txt_monto" />

    <TextView
        android:id="@+id/lbl_motivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lbl_motivo"
        app:layout_constraintEnd_toEndOf="@+id/txt_fecha"
        app:layout_constraintStart_toStartOf="@+id/txt_fecha"
        app:layout_constraintTop_toBottomOf="@+id/txt_fecha" />

    <Button
        android:id="@+id/btn_guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_guardar"
        app:layout_constraintEnd_toEndOf="@+id/btn_gps"
        app:layout_constraintStart_toStartOf="@+id/btn_gps"
        app:layout_constraintTop_toBottomOf="@+id/btn_gps" />

    <Button
        android:id="@+id/btn_gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_gps"
        app:layout_constraintEnd_toEndOf="@+id/txt_motivo"
        app:layout_constraintStart_toStartOf="@+id/txt_motivo"
        app:layout_constraintTop_toBottomOf="@+id/txt_motivo" />

    <EditText
        android:id="@+id/txt_monto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/lbl_monto"
        app:layout_constraintStart_toStartOf="@+id/lbl_monto"
        app:layout_constraintTop_toBottomOf="@+id/lbl_monto"
        tools:text="Monto" />

    <EditText
        android:id="@+id/txt_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/lbl_fecha"
        app:layout_constraintStart_toStartOf="@+id/lbl_fecha"
        app:layout_constraintTop_toBottomOf="@+id/lbl_fecha"
        tools:text="Fecha" />

    <EditText
        android:id="@+id/txt_motivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/lbl_motivo"
        app:layout_constraintStart_toStartOf="@+id/lbl_motivo"
        app:layout_constraintTop_toBottomOf="@+id/lbl_motivo"
        tools:text="motivo" />

    <TextView
        android:id="@+id/tvUbicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tvLocatio"
        app:layout_constraintEnd_toEndOf="@+id/btn_cancelar"
        app:layout_constraintStart_toStartOf="@+id/btn_cancelar"
        app:layout_constraintTop_toBottomOf="@+id/btn_cancelar"
        tools:text="Ubicación - Latitud y Longitud" />

</androidx.constraintlayout.widget.ConstraintLayout>